Seleçao de aulas e videos prontos

--- a/asset/css/template.css
+++ b/asset/css/template.css
@@ -111,3 +111,17 @@ body{
  .aula:hover{
      background-color: #AAA;
  }
+
+ /*Formulario de duvida */
+ .titulo-duvida{
+    margin-left:10px ;
+ }
+ .form_duvida{
+     padding-left: 10px;
+     padding-right: 10px;
+ }
+ .form_duvida textarea{
+    width: 100%;
+    height: 150px; 
+   
+ }
