--- a/asset/css/template.css
+++ b/asset/css/template.css
@@ -8,10 +8,13 @@ body{
 .ead-titulo{
     line-height: 40px;
     margin-left: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    
 }
 .topo{
     height: 40px;
-    background-color: #24292e;
+    background-color: #2d3691;
     color:#fff;
 }
 
@@ -27,12 +30,14 @@ body{
      height: 40px;
      line-height: 40px;
      text-align: center;
+     font-family: Verdana, Geneva, Tahoma, sans-serif;
 
  }
 
  .btn-sair:hover{
-     background-color: rgb(182, 180, 180);
+     background-color: #FFF;
      color:#333;
+     font-weight: bold;
   
  }
  .topousuario{
@@ -40,6 +45,8 @@ body{
      margin-right: 20px;
      height: 40xp;
      line-height: 40px;
+     font-family: Verdana, Geneva, Tahoma, sans-serif;
+     font-weight: bold;
  }
  .turmasitem{
      width: 150px;
@@ -53,6 +60,7 @@ body{
      padding: 5px;
      width: 140px;
      height: 25px;
+     border-bottom: 1px solid #fff;
      
  }
  
@@ -70,10 +78,11 @@ body{
 
  .turmainfo{
      height: 50px;
-     background-color: #a7a6a6;
+     background-color: #ffd634;
      text-align: center;
      line-height: 60px;
      font-family: 'Baloo Tammudu 2', cursive;
+     margin-top: -20px;
  }
  .left-aulas{
 
@@ -99,13 +108,15 @@ body{
      width: 80%;
      min-height: 300px;
      float: left;
-     background-color: #BBB;
+     background-color: #fff;
      overflow-y: scroll;
  }
  .aula{
      height: 30px;
      line-height: 30px;
      padding-left: 30px;
+     font-weight: bold;
+     font-family: Verdana, Geneva, Tahoma, sans-serif
 
  }
  .aula:hover{
@@ -115,6 +126,7 @@ body{
  /*Formulario de duvida */
  .titulo-duvida{
     margin-left:10px ;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
  }
  .form_duvida{
      padding-left: 10px;
@@ -124,4 +136,11 @@ body{
     width: 100%;
     height: 150px; 
    
+ }
+
+ .alert_quest{
+     text-align: center;
+ }
+ .ok_aula{
+     margin-left: 10px;
  }
