--- a/painel/asset/css/template.css
+++ b/painel/asset/css/template.css
@@ -46,3 +46,65 @@ body{
      font-family: Verdana, Geneva, Tahoma, sans-serif;
      font-weight: bold;
  }
+ /*Página de edição de turma*/
+ .input{
+    margin-bottom: 10px;
+    margin-left: 20px;
+}
+form span{
+    margin-left: 20px;
+}
+h1{
+    margin-left: 20px;
+}
+h4{
+    background-color: #DDD;
+    padding-top: 10px;
+    height: 35px;
+    line-height: 25px;
+}
+
+h5{
+    padding-left: 40px;
+    height: 10px;
+    line-height: 20px;
+    
+}
+.exe{
+    width: 16px;
+    height: 16px;
+    color:#fff;
+    background-color: red;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 8pt;
+    border-radius: 50%;
+    text-align: center;
+    padding: 5px;
+    line-height: 17px;
+    float: left;
+    margin-left: 20px;
+    margin-right: 5px;
+}
+.exe a{
+    text-decoration: none;
+}
+
+.exe_e{
+    height: 16px;
+    color:#fff;
+    background-color: rgb(66, 35, 241);
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 8pt;
+    border-radius: 5px;
+    text-align: center;
+    padding: 5px;
+    line-height: 17px;
+    float: left;
+    
+    margin-right: 5px;
+}
+.exe_e a{
+    text-decoration: none;
+}
