--- a/painel/asset/css/template.css
+++ b/painel/asset/css/template.css
@@ -31,7 +31,19 @@ body{
      font-family: Verdana, Geneva, Tahoma, sans-serif;
 
  }
-
+ .btn-alternar{
+    float: left;
+    width: 60px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+ }
+ .btn-alternar:hover{
+    background-color: #FFF;
+     color:#333;
+     font-weight: bold;
+ }
  .btn-sair:hover{
      background-color: #FFF;
      color:#333;
@@ -47,6 +59,14 @@ body{
      font-weight: bold;
  }
  /*Página de edição de turma*/
+ .btn-newTurma{
+     padding: 5px;
+     background-color: #2d3691;
+     margin-bottom: 10px;
+     margin-left: 20px;
+     font-weight: bold;
+     color: #fff;
+ }
  .input{
     margin-bottom: 10px;
     margin-left: 20px;
@@ -57,31 +77,41 @@ form span{
 h1{
     margin-left: 20px;
 }
-h4{
+h2{
+    margin-left: 20px;
+}
+.h4{
     background-color: #DDD;
     padding-top: 10px;
     height: 35px;
     line-height: 25px;
+    font-size: 20px;
+    
 }
 
-h5{
+.h5{
     padding-left: 40px;
     height: 10px;
     line-height: 20px;
+    font-size: 15px;
+    font-weight: bold;
     
 }
+.h1-home{
+    margin-left: 10px;
+}
 .exe{
-    width: 16px;
-    height: 16px;
+    width: 15px;
+    height: 15px;
     color:#fff;
     background-color: red;
     font-weight: bold;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 8pt;
     border-radius: 50%;
     text-align: center;
     padding: 5px;
-    line-height: 17px;
+    line-height: 15px;
     float: left;
     margin-left: 20px;
     margin-right: 5px;
@@ -91,7 +121,7 @@ h5{
 }
 
 .exe_e{
-    height: 16px;
+    height: 15px;
     color:#fff;
     background-color: rgb(66, 35, 241);
     font-weight: bold;
@@ -100,15 +130,90 @@ h5{
     border-radius: 5px;
     text-align: center;
     padding: 5px;
-    line-height: 17px;
+    line-height: 15px;
     float: left;
-    
     margin-right: 5px;
 }
 .exe_e a{
     text-decoration: none;
 }
 /*Cadastro da aulas*/
+.cadAulaTop{
+    margin-bottom: 20px;
+}
+.cadAulaTop legend{
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20pt;
+}
+.cadAula legend{
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20pt;
+}
+
 .cadAula input, select{
     margin-bottom: 15px;
+}
+
+
+.edit_video{
+    margin-left: 20px;
+}
+
+.edit_quest{
+    margin-left:20px ;
+    
+}
+.edit_quest input{
+    margin-bottom: 10px;
+}
+/*Home ajustes*/
+
+.container-home{
+    display: flex;
+}
+.cont-tabela{
+    display: flex;
+    flex: 1;
+    border-right: 1px solid #ddd;
+    overflow-y: scroll;
+    height: 800px;    
+}
+
+
+.cont-alt{
+    display: flex;
+    flex:3;
+    
+}
+.aluno{
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    height: 300px;
+    border-radius:5px;
+    border:none;
+    background-color: #DDD;
+    margin-left: 20px;
+    box-shadow: 1px 2px 5px rgba(0,0,0.5);
+}
+.legenda{
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15pt;
+    border-top:1px solid #2d3691;
+    line-height: 40px;
+    height: 40px;
+}
+.imagem{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80%;
+   
+}
+.imagem img{
+    width: 150px;
+    height: 150px;
 }
