--- a/painel/asset/css/template.css
+++ b/painel/asset/css/template.css
@@ -217,3 +217,22 @@ h2{
     width: 150px;
     height: 150px;
 }
+/*Cadastro do aluno*/
+.aluno_cad{
+    margin-left: 20px;
+}
+
+.aluno_cad input{
+    margin-bottom:10px;
+}
+.voltar{
+    margin-left: 20px;
+    font-size: 10pt;
+    text-decoration: none;
+    margin-top: 40px;
+    box-shadow: 1px, 3px,10px rgba(0,0,0.5);
+    padding: 5px;
+    background-color: #DDD;
+}
+    
+
